# ray_tracing

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test.ipynb
1_first_ray_tracer/: README.md  ray_tracing.py
BadTracer/: README.md  ray_tracing.py
PyTracer/: README.md  color.py  light.py  main.py  point.py  ray.py  scene.py  sphere.py  test.ipynb  vector.py
PyTracer/src/: color.py  light.py  point.py  ray.py  scene.py  sphere.py  vector.py
